--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/arm-containerinstance": "^9.1.0",
     "@azure/functions": "^4.0.0",
     "@azure/identity": "^4.0.0",
+    "@azure/storage-queue": "^12.16.0",
     "@types/tunnel": "^0.0.6",
     "azure-iot-common": "^1.13.2",
     "azure-iot-device": "^1.18.3",
